Fixed footer display covering base of page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,7 @@ h1, h2, h3, h4, h5, h6 {
 body{
   font-family: 'Piazzolla', serif;
   font-size: 1rem;
+  margin-bottom: 5rem;
 }
 a{
   color: #000000;
